# easyscale

./: .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.claude/agents/: easyscale-developer.md
.github/workflows/: docker-publish.yml
deploy/kubernetes/: README.md  configmap.yaml  crd.yaml  deployment.yaml  install.yaml  namespace.yaml  rbac.yaml  serviceaccount.yaml
docs/: .gitignore  README.md  api-reference.md  architecture.md  conf.py  configuration.md  examples.md  faq.md  getting-started.md  index.md  installation.md
easyscale/: __init__.py  __main__.py
easyscale/config/: __init__.py  crd_loader.py  loader.py  models.py  validator.py
easyscale/controller/: __init__.py  daemon.py  scaler.py  scheduler.py
easyscale/k8s/: __init__.py  client.py  resource_manager.py
easyscale/utils/: __init__.py  logger.py  state.py  time_utils.py
examples/: README.md  advanced-schedule.yaml  basic-schedule.yaml  business-hours.yaml  simple-time-based.yaml  weekend-scale.yaml
tests/: __init__.py  test_integration.py
tests/test_config/: test_loader.py  test_models.py  test_validator.py
tests/test_controller/: __init__.py  test_daemon.py  test_scaler.py  test_scheduler.py
tests/test_k8s/: __init__.py  test_client.py  test_resource_manager.py
tests/test_utils/: test_state.py  test_time_utils.py
